# bigdata-api-resources

cookbooks/financial-agent-demo/: .env.example  README.md  main.py  pyproject.toml
cookbooks/financial-agent-demo/bigdata_search_agent/: __init__.py  configuration.py  graph.py  prompts.py  state.py  streaming_example.py  tools.py  utils.py
cookbooks/financial-agent-demo/bigdata_search_agent/tests/: __init__.py  debug_news.py  debug_tool_output.py  env_example.txt  test_config.py  test_filings_search.py  test_knowledge_graph.py  test_news_search.py  test_transcript_search.py
how_to_guides/: batch_file_analytics_download.py  batch_file_upload.py
how_to_guides/batch_file_upload/: .env  README.md  batch_file_upload.py
how_to_guides/company_daily_news/: .env  README.md  company_daily_news.py
how_to_guides/crypto_news_board/: .env  README.md  crypto_news_board.py  crypto_news_search_queries.csv
how_to_guides/news_by_topics/: README.md  get_company_ids.py  get_news.py  get_top_topic_ids.py  run_news_pipeline.py  utils.py
how_to_guides/news_by_topics/input/: public_companies.csv
how_to_guides/news_by_topics/output/: company_ids.csv  top_topics_to_search.csv
how_to_guides/retrieve_entire_articles/: .env  README.md  electrification_keywords.txt  electrification_sentences.txt  requirements.txt
how_to_guides/retrieve_entire_articles.py/: retrieve_entire_articles.py
how_to_guides/search_in_premium_sources/: .env  README.md  example_scenarios.py  search_in_premium_sources.py  search_statistics.py  test_scenarios.py
